--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-auto-inject-version",
+  "name": "webpack-auto-inject-version-next",
   "version": "1.2.3",
-  "repository": "radswiat/webpack-auto-inject-version",
+  "repository": "teodoradima/webpack-auto-inject-version",
   "description": "Webpack plugin for auto inject version from package.json",
   "main": "dist/WebpackAutoInjectVersion.js",
   "scripts": {
@@ -9,8 +9,8 @@
     "start:watch": "babel-node tools/compile-watch.js",
     "eslint": "eslint ./src/**"
   },
-  "author": "Radoslaw Swiat",
-  "license": "ISC",
+  "author": "Teodora Dima",
+  "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
